# account-plugins

./: .bzrignore  AUTHORS  Jenkinsfile  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure  configure.ac
data/: Makefile.am
data/icons/: Makefile.am
data/providers/: Makefile.am  facebook.provider  facebook.provider.in  facebook.provider.in.in  flickr.provider  flickr.provider.in  flickr.provider.in.in  foursquare.provider  foursquare.provider.in  foursquare.provider.in.in  google.provider  google.provider.in  google.provider.in.in  identica.provider  identica.provider.in  identica.provider.in.in  instagram.provider.in.in  jabber.provider  linkedin.provider.in.in  mcloud.provider.in.in  microsoft.provider.in.in  nextcloud.provider.in.in  onedrive.provider.in.in  owncloud.provider.in.in  sina.provider  sina.provider.in  sina.provider.in.in  sohu.provider  sohu.provider.in  sohu.provider.in.in  tencent.provider.in.in  twitter.provider  twitter.provider.in  twitter.provider.in.in  vk.provider.in.in  windows-live.provider  windows-live.provider.in  windows-live.provider.in.in
data/services/: Makefile.am  facebook-contacts.service.in  facebook-im.service  facebook-im.service.in  facebook-microblog.service  facebook-microblog.service.in  facebook-sharing.service  facebook-sharing.service.in  flickr-microblog.service  flickr-microblog.service.in  flickr-sharing.service  flickr-sharing.service.in  foursquare-microblog.service  foursquare-microblog.service.in  gmail.service  google-docs.service  google-docs.service.in  google-drive.service.in  google-im.service  google-im.service.in  google-talk.service  google-youtube.service.in  identica-microblog.service  identica-microblog.service.in  instagram-microblog.service.in  jabber-im.service  linkedin-microblog.service.in  picasa.service  picasa.service.in  sina-microblog.service  sina-microblog.service.in  sohu-microblog.service  sohu-microblog.service.in  tencent-microblog.service.in  twitter-microblog.service  twitter-microblog.service.in  wlm.service  wlm.service.in
data/webkit-options/: Makefile.am  accounts.google.com.conf  api.t.sohu.com.conf  api.weibo.com.conf  foursquare.com.conf  identi.ca.conf  login.live.com.conf  open.t.qq.com.conf  secure.flickr.com.conf  www.facebook.com.conf  www.linkedin.com.conf
debian/: account-plugin-facebook.install  account-plugin-flickr.install  account-plugin-flickr.maintscript  account-plugin-flickr.postrm  account-plugin-foursquare.install  account-plugin-generic-oauth.install  account-plugin-google.install  account-plugin-icons.install  account-plugin-identica.install  account-plugin-instagram.install  account-plugin-linkedin.install  account-plugin-mcloud.install  account-plugin-microsoft.install  account-plugin-nextcloud.install  account-plugin-onedrive.install  account-plugin-owncloud.install  account-plugin-sina.install  account-plugin-sohu.install  account-plugin-tencent.install  account-plugin-tools.install  account-plugin-twitter.install  account-plugin-vk.install  account-plugin-windows-live.install  changelog  control  copyright  libaccount-plugin-facebook.install  libaccount-plugin-flickr.install  libaccount-plugin-google.install  libaccount-plugin-twitter.install  rules  uoa-create
po/: POTFILES.in  POTFILES.skip
qml/: Makefile.am
qml/facebook/: Main.qml
qml/flickr/: Main.qml
qml/google/: Main.qml
qml/jabber/: Main.qml
qml/mcloud/: Main.qml  WebView.qml
qml/microsoft/: Main.qml
qml/nextcloud/: NewAccount.qml
qml/owncloud/: NewAccount.qml
qml/twitter/: Main.qml
qml/vk/: Main.qml
src/: AccountPlugin.vapi  accounts.vapi  config.vapi  facebook.vala  flickr.vala  foursquare.vala  generic-oauth.vala  google.vala  identica.vala  signon.vapi  sina.vala  sohu.vala  twitter.vala  windows-live.vala
tools/: Makefile.am  account-console  facebook-login.sh  facebook.sh  google-login.sh  google.sh
