nobase_dist_qmlplugins_DATA = \
	facebook/Main.qml \
	flickr/Main.qml \
	google/Main.qml \
	twitter/Main.qml \
	e-mail/AuthSelector.qml \
	e-mail/AutoConfigModel.qml \
	e-mail/EncryptionSelector.qml \
	e-mail/ErrorDialog.qml \
	e-mail/FooterButtons.qml \
	e-mail/ListItemSwitch.qml \
	e-mail/Main.qml \
	e-mail/PopUpQueue.qml \
	e-mail/SectionDivider.qml \
	e-mail/ServerDetailsModel.qml \
	e-mail/ServerSettings.qml \
	e-mail/ServiceValidationOverlay.qml \
	e-mail/SslCertificateView.qml
