iconsdir = $(datadir)/icons/hicolor/32x32/apps
dist_icons_DATA = \
	aim.png \
	facebook.png \
	flickr.png \
	foursquare.png \
	gadugadu.png \
	google.png \
	groupwise.png \
	identica.png \
	icq.png \
	irc.png \
	jabber.png \
	live.png \
	msn.png \
	mxit.png \
	myspace.png \
	people-nearby.png \
	sametime.png \
	sip.png \
	twitter.png \
	yahoo.png \
	zephyr.png


