dist_services_DATA = \
	facebook-im.service \
	facebook-microblog.service \
	facebook-sharing.service \
	flickr-microblog.service \
	flickr-sharing.service \
	foursquare-microblog.service \
	google-docs.service \
	identica-microblog.service \
	picasa.service \
	sina-microblog.service \
	sohu-microblog.service \
	twitter-microblog.service
