webkitoptionsdir = $(sysconfdir)/signon-ui/webkit-options.d
dist_webkitoptions_DATA = \
	accounts.google.com.conf \
	api.t.sina.com.cn.conf \
	api.t.sohu.com.conf \
	api.twitter.com.conf \
	foursquare.com.conf \
	identi.ca.conf \
	login.live.com.conf \
	login.yahoo.com.conf \
	www.facebook.com.conf
